--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -22,7 +22,8 @@
   display: inline-block;
 }
 
-.banner h1 {
+.banner h1,
+.wrap {
   margin-bottom: 20px;
   font-size: 65px;
   font-weight: 700;
@@ -33,7 +34,6 @@
 }
 
 .wrap {
-  margin-left: 30px;
   border-right: 0.08em solid #666;
 }
 
@@ -48,6 +48,7 @@
 
 .banner button {
   margin-top: 60px;
+  margin-bottom: 30px;
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 0.8px;
