--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -4,7 +4,7 @@
 }
 
 .skill-bx {
-  margin-top: -60px;
+  margin-top: 15em;
   padding: 60px 50px;
   text-align: center;
 
@@ -34,7 +34,8 @@
 
 .skill-slider .item img {
   width: 50%;
-  margin: 0 auto 15px auto;
+  height: 150px;
+  margin: 30px auto 50px auto;
 }
 
 .background-image-left {
