--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -13,7 +13,7 @@
 
 .projects p {
   width: 56%;
-  margin: 14px auto 30px auto;
+  margin: 30px auto 90px auto;
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
@@ -23,16 +23,18 @@
 }
 
 .projects .nav.nav-pills {
-  width: 72%;
+  width: 90%;
   margin: 0 auto;
-  border-radius: 50px;
+  gap: 1rem;
+  /* border-radius: 50px; */
 
   /* background-color: rgba(255, 255, 255, 10); */
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .projects .nav.nav-pills .nav-item {
-  width: 33.33333%;
+  width: 20%;
+  border-radius: 20px;
 }
 
 .projects .nav.nav-pills .nav-link {
@@ -47,7 +49,7 @@
 
   background-color: transparent;
   color: #fff;
-  border-radius: 0;
+  border-radius: 20px;
   transition: 0.3s ease-in-out;
 }
 
@@ -61,6 +63,7 @@
   z-index: -1;
 
   background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
+  border-radius: 20px;
   transition: 0.3s ease-in-out;
 }
 
@@ -69,20 +72,5 @@
 }
 
 .projects .nav.nav-pills .nav-link.active {
-  border: 1px solid rgba(255, 255, 255, 1);
-}
-
-#projects-tabs-tab-first {
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  border-radius: 55px 0px 0px 55px;
-}
-
-#projects-tabs-tab-second {
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  border-bottom: 0 55px 55px 0;
-}
-
-#projects-tabs-tab-third {
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  border-radius: 0 55px 55px 0;
+  border: 1px solid linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
 }
