--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -24,7 +24,7 @@ nav.navbar .navbar-nav .nav-link {
   font-weight: 400;
   color: #fff !important;
   letter-spacing: 0.8px;
-  padding: 0 25px;
+  padding: 10px 25px;
   font-size: 18px;
   opacity: 0.75;
 }
