--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -29,11 +29,12 @@
   /* border-radius: 50px; */
 
   /* background-color: rgba(255, 255, 255, 10); */
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .projects .nav.nav-pills .nav-item {
-  width: 20%;
+  width: 33.33333%;
+  padding: 0 10px;
   border-radius: 20px;
 }
 
@@ -63,7 +64,8 @@
   z-index: -1;
 
   background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
-  border-radius: 20px;
+  border-radius: 10px;
+
   transition: 0.3s ease-in-out;
 }
 
